infra/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatting-alarm-backend
  namespace: chatting-alarm
  labels:
    app: chatting-alarm-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  type: ClusterIP

  selector:
    app: chatting-alarm-backend

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
      appProtocol: http
