infra/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatting-alarm-frontend
  namespace: chatting-alarm
  labels:
    app: chatting-alarm-frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: ClusterIP

  selector:
    app: chatting-alarm-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      appProtocol: http
